--- a/DotnetFinancialTrackerApp/Components/Insight/MemberBreakdown.razor
+++ b/DotnetFinancialTrackerApp/Components/Insight/MemberBreakdown.razor
@@ -1,7 +1,7 @@
 @using DotnetFinancialTrackerApp.Services
 @using MudBlazor
 
-<MudItem xs="12" md="6">
+<MudItem xs="12" >
     <MudCard Class="summary-card chart-card" Elevation="0">
         <MudCardContent>
             <div class="chart-header">
