--- a/DotnetFinancialTrackerApp/Components/Wellbeing/GoalsFilter.razor
+++ b/DotnetFinancialTrackerApp/Components/Wellbeing/GoalsFilter.razor
@@ -1,6 +1,6 @@
 @using MudBlazor
 
-<MudGrid Class="goal-filter-grid" Spacing="2">
+<MudGrid Class="goal-filter-grid mb-2" Spacing="2">
     <MudItem xs="12" sm="6" md="3">
         <UiFilterField Label="Category">
             <MudSelect T="string"
